--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^9.1.4",
     "@angular/compiler": "^9.1.4",
     "@angular/core": "^9.1.4",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "^9.1.4",
     "@angular/material": "^9.2.2",
     "@angular/platform-browser": "^9.1.4",
@@ -27,7 +28,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.14.3",
     "jquery": "^3.5.1",
+    "ngx-image-cropper": "^3.1.8",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.2",
     "zone.js": "~0.10.2"
@@ -51,6 +54,11 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.2",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "@angular-devkit/architect": "~0.900",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1"
   }
 }
