--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "@angular/compiler-cli": "^9.1.4",
     "@angular/language-service": "^9.1.4",
     "@editorjs/editorjs": "^2.17.0",
+    "@editorjs/embed": "^2.3.1",
+    "@editorjs/header": "^2.4.1",
+    "@editorjs/image": "^2.3.4",
+    "@editorjs/link": "^2.1.3",
+    "@editorjs/list": "^1.4.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.38",
