--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-frontend",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,14 +11,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.4",
     "@angular/cdk": "^9.2.1",
     "@angular/common": "^9.1.4",
     "@angular/compiler": "^9.1.4",
     "@angular/core": "^9.1.4",
     "@angular/fire": "^6.0.0",
     "@angular/forms": "^9.1.4",
-    "@angular/material": "^9.2.2",
     "@angular/platform-browser": "^9.1.4",
     "@angular/platform-browser-dynamic": "^9.1.4",
     "@angular/router": "^9.1.4",
@@ -27,7 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap-4-grid": "^3.4.0",
     "firebase": "^7.14.3",
     "jquery": "^3.5.1",
     "ngx-image-cropper": "^3.1.8",
